// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty 1`] = `
<div
  className="direct-transaction"
>
  <div
    className="form-row"
  >
    <div
      className="form-row-input"
    >
      <select
        className="full-width"
        onChange={[Function]}
        value=""
      >
        <option>
          Jan
        </option>
        <option>
          Martin
        </option>
        <option
          value="NEW_PARTICIPANT"
        >
          New participant…
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-row"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="form-row-input"
    >
      <input
        onChange={[Function]}
        placeholder="Name …"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="direct-transaction-amount"
  >
    <svg
      height="16"
      width="16"
    >
      <path
        d="m15.511 8.5129c0-0.8974-1.0909-1.3404-1.7168-0.6973l-4.7832 4.7837v-11.573c0.019125-1.3523-2.0191-1.3523-2 0v11.572l-4.7832-4.7832c-0.94251-0.98163-2.3957 0.47155-1.4141 1.4141l6.49 6.4911c0.3878 0.387 1.0228 0.391 1.414 0l6.4903-6.4906c0.1935-0.1883 0.30268-0.4468 0.3027-0.7168z"
      />
    </svg>
    <input
      onChange={[Function]}
      placeholder="0"
      step="any"
      type="number"
      value=""
    />
  </div>
  <div
    className="form-row"
  >
    <div
      className="form-row-input"
    >
      <select
        className="full-width"
        onChange={[Function]}
        value=""
      >
        <option>
          Jan
        </option>
        <option>
          Martin
        </option>
        <option
          value="NEW_PARTICIPANT"
        >
          New participant…
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-row"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="form-row-input"
    >
      <input
        onChange={[Function]}
        placeholder="Name …"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders prefilled 1`] = `
<div
  className="direct-transaction"
>
  <div
    className="form-row"
  >
    <div
      className="form-row-input"
    >
      <select
        className="full-width"
        onChange={[Function]}
        value="Martin"
      >
        <option>
          Jan
        </option>
        <option>
          Martin
        </option>
        <option
          value="NEW_PARTICIPANT"
        >
          New participant…
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-row"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="form-row-input"
    >
      <input
        onChange={[Function]}
        placeholder="Name …"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="direct-transaction-amount"
  >
    <svg
      height="16"
      width="16"
    >
      <path
        d="m15.511 8.5129c0-0.8974-1.0909-1.3404-1.7168-0.6973l-4.7832 4.7837v-11.573c0.019125-1.3523-2.0191-1.3523-2 0v11.572l-4.7832-4.7832c-0.94251-0.98163-2.3957 0.47155-1.4141 1.4141l6.49 6.4911c0.3878 0.387 1.0228 0.391 1.414 0l6.4903-6.4906c0.1935-0.1883 0.30268-0.4468 0.3027-0.7168z"
      />
    </svg>
    <input
      onChange={[Function]}
      placeholder="0"
      step="any"
      type="number"
      value={11}
    />
  </div>
  <div
    className="form-row"
  >
    <div
      className="form-row-input"
    >
      <select
        className="full-width"
        onChange={[Function]}
        value="Jan"
      >
        <option>
          Jan
        </option>
        <option>
          Martin
        </option>
        <option
          value="NEW_PARTICIPANT"
        >
          New participant…
        </option>
      </select>
    </div>
  </div>
  <div
    className="form-row"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="form-row-input"
    >
      <input
        onChange={[Function]}
        placeholder="Name …"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
